--- a/oct-2025/all_flashcards/1. vocabulary_extraction.md
+++ b/oct-2025/all_flashcards/1. vocabulary_extraction.md
@@ -20,114 +20,109 @@ They (did), उन्होंने
 
 ## Nouns:
 
-books, किताब
-apple, सेब
-water, पानी
-coffee, कॉफ़ी
-tea, चाय
-time, समय
-day, दिन
-week, सप्ताह
-year, साल
-hour, घंटा
-morning, सुबह
-afternoon, दोपहर
-evening, शाम
-night, रात
-today, आज
-tomorrow, कल
-yesterday, कल
-people, लोग
-person, व्यक्ति
-man, आदमी
-woman, औरत
-child, बच्चा
-children, बच्चे
-boy, लड़का
-girl, लड़की
-friend, दोस्त
-family, परिवार
-parent, माता-पिता
-father, पिता
-mother, माँ
-brother, भाई
-sister, बहन
-husband, पति
-wife, पत्नी
-son, बेटा
-daughter, बेटी
-name, नाम
-age, उम्र
-life, जीवन
-room, कमरा
-house, घर
-door, दरवाज़ा
-window, खिड़की
-school, स्कूल
-college, कॉलेज
-office, दफ़्तर
-city, शहर
-country, देश
-road, सड़क
-shop, दुकान
-market, बाज़ार
-hospital, अस्पताल
-doctor, डॉक्टर
-world, दुनिया
-thing, चीज़
-car, कार
-bus, बस
-train, ट्रेन
-table, मेज़
-chair, कुर्सी
-bed, बिस्तर
-book, किताब
-paper, कागज़
-number, संख्या
-money, पैसा
-food, खाना
-hand, हाथ
-eye, आँख
-head, सिर
-face, चेहरा
-body, शरीर
-leg, पैर
-problem, समस्या
-question, सवाल
-answer, जवाब
-idea, विचार
-mind, मन/दिमाग़
-change, बदलाव
-difference, फ़र्क़
-type, प्रकार
-group, समूह
-work, काम
-music, संगीत
-story, कहानी
-film, फ़िल्म
-show/program, कार्यक्रम
-meeting, बैठक
-party, पार्टी
-lunch, दोपहर का खाना
-dinner, रात का खाना
-breakfast, नाश्ता
-word, शब्द
-language, भाषा
-voice, आवाज़
-conversation, बातचीत
-information, जानकारी
-government, सरकार
-law, कानून
-court, अदालत
-police, पुलिस
-floor, फ़र्श
-bag, बैग
-song, गीत
-movie, फ़िल्म
-clothes, कपड़े
-travel, यात्रा
-friends, दोस्त
-
+book/books, किताब/किताबें (feminine)
+apple/apples, सेब/सेब (masculine)
+water, पानी (masculine - uncountable)
+coffee, कॉफ़ी (feminine - uncountable)
+tea, चाय (feminine - uncountable)
+time, समय (masculine)
+day/days, दिन/दिन (masculine)
+week/weeks, सप्ताह/सप्ताह (masculine)
+year/years, साल/साल (masculine)
+hour/hours, घंटा/घंटे (masculine)
+morning, सुबह (feminine)
+afternoon, दोपहर (masculine/feminine)
+evening, शाम (feminine)
+night, रात (feminine)
+today, आज (adverb - no plural)
+tomorrow, कल (adverb - no plural)
+yesterday, कल (adverb - no plural)
+person/people, व्यक्ति/लोग (masculine)
+man/men, आदमी/आदमी (masculine)
+woman/women, औरत/औरतें (feminine)
+child/children, बच्चा/बच्चे/बच्ची/बच्चियाँ (masculine/feminine)
+boy/boys, लड़का/लड़के (masculine)
+girl/girls, लड़की/लड़कियाँ (feminine)
+friend/friends, दोस्त/दोस्त (masculine)
+family/families, परिवार/परिवार (masculine)
+parents, माता-पिता/माता-पिता (masculine plural)
+father, पिता (masculine)
+mother, माँ(feminine)
+brother/brothers, भाई/भाई (masculine)
+sister/sisters, बहन/बहनें (feminine)
+husband, पति (masculine)
+wife, पत्नी (feminine)
+son/sons, बेटा/बेटे (masculine)
+daughter/daughters, बेटी/बेटियाँ (feminine)
+name/names, नाम/नाम (masculine)
+age/ages, उम्र/उम्र (feminine)
+life/lives, जीवन/जीवन (masculine)
+room/rooms, कमरा/कमरे (masculine)
+house/houses, घर/घर (masculine)
+door/doors, दरवाज़ा/दरवाज़े (masculine)
+window/windows, खिड़की/खिड़कियाँ (feminine)
+school/schools, स्कूल/स्कूल (masculine)
+college/colleges, कॉलेज/कॉलेज (masculine)
+office/offices, दफ़्तर/दफ़्तर (masculine)
+city/cities, शहर/शहर (masculine)
+country/countries, देश/देश (masculine)
+road/roads, सड़क/सड़कें (feminine)
+shop/shops, दुकान/दुकानें (feminine)
+market/markets, बाज़ार/बाज़ार (masculine)
+hospital/hospitals, अस्पताल/अस्पताल (masculine)
+doctor/doctors, डॉक्टर/डॉक्टर (masculine)
+world/worlds, दुनिया/दुनिया (feminine)
+thing/things, चीज़/चीज़ें (feminine)
+car/cars, कार/cars (feminine)
+bus/buses, बस/बसें (feminine)
+train/trains, ट्रेन/ट्रेनें (feminine)
+table/tables, मेज़/मेज़ें (feminine)
+chair/chairs, कुर्सी/कुर्सियाँ (feminine)
+bed/beds, बिस्तर/बिस्तर (masculine)
+paper/papers, कागज़/कागज़ (masculine)
+number/numbers, संख्या/संख्याएँ (feminine)
+money, पैसा/पैसे (masculine)
+food, खाना (masculine - uncountable)
+hand/hands, हाथ/हाथ (masculine)
+eye/eyes, आँख/आँखें (feminine)
+head/heads, सिर/सिर (masculine)
+face/faces, चेहरा/चेहरे (masculine)
+body/bodies, शरीर/शरीर (masculine)
+leg/legs, पैर/पैर (masculine)
+problem/problems, समस्या/समस्याएँ (feminine)
+question/questions, सवाल/सवाल (masculine)
+answer/answers, जवाब/जवाब (masculine)
+idea/ideas, विचार/विचार (masculine)
+mind/minds, मन/मन, दिमाग़/दिमाग़ (masculine)
+change/changes, बदलाव/बदलाव (masculine)
+difference/differences, फ़र्क़/फ़र्क़ (masculine)
+type/types, प्रकार/प्रकार (masculine)
+group/groups, समूह/समूह (masculine)
+work, काम (masculine)
+music, संगीत (masculine - uncountable)
+story/stories, कहानी/कहानियाँ (feminine)
+film/films, फ़िल्म/फ़िल्में (feminine)
+show/shows, program/programs, कार्यक्रम/कार्यक्रम (masculine)
+meeting/meetings, बैठक/बैठकें (feminine)
+party/parties, पार्टी/पार्टियाँ (feminine)
+lunch, दोपहर का खाना (masculine)
+dinner, रात का खाना (masculine)
+breakfast, नाश्ता (masculine)
+word/words, शब्द/शब्द (masculine)
+language/languages, भाषा/भाषाएँ (feminine)
+voice/voices, आवाज़/आवाज़ें (feminine)
+conversation/conversations, बातचीत/बातचीत (feminine)
+information, जानकारी/जानकारी (feminine - uncountable)
+government/governments, सरकार/सरकारें (feminine)
+law/laws, कानून/कानून (masculine)
+court/courts, अदालत/अदालतें (feminine)
+police, पुलिस/पुलिस (feminine - collective)
+floor/floors, फ़र्श/फ़र्श (masculine)
+bag/bags, बैग/बैग (masculine)
+song/songs, गीत/गीत (masculine)
+movie/movies, फ़िल्म/फ़िल्में (feminine)
+cloth/clothes, कपड़ा/कपड़े (masculine)
+travel/travels, यात्रा/यात्राएँ (feminine)
 
 ## Verbs:
 
