--- a/oct-2025/all_flashcards/3. He_She_It_across_tenses.md
+++ b/oct-2025/all_flashcards/3. He_She_It_across_tenses.md
@@ -4,7 +4,6 @@ He drinks (far), वो पीता है।
 She writes (near), ये लिखती है।
 That works, वो काम करता है।
 This helps, ये मदद करता है।
-That grows, वो बढ़ता है।
 He reads (far), वो पढ़ता है।
 She sings (near), ये गाती है।
 It stops (far), वो रुकता है।
@@ -12,13 +11,11 @@ This opens, ये खुलता है।
 That closes, वो बंद होता है।
 He thinks (far), वो सोचता है।
 She knows (near), ये जानती है।
-That happens, वो होता है।
 This changes, ये बदलता है।
 That starts, वो शुरू होता है।
 He listens (far), वो सुनता है।
 She understands (near), ये समझती है।
-This feels, ये महसूस करता है।
-That believes, वो मानता है।
+He believes (far), वो मानता है।
 He forgets (far), वो भूलता है।
 She remembers (near), ये याद रखती है।
 
@@ -28,56 +25,48 @@ She remembers (near), ये याद रखती है।
 
 He is eating (far), वो खा रहा है।
 She is sleeping (near), ये सो रही है।
-It is building (far), वो बन रहा है।
-This is cutting, ये कट रहा है।
-That is joining, वो जुड़ रहा है।
+He is building (far), वो बन रहा है।
+He is cutting (near), ये कट रहा है।
+He is joining (far), वो जुड़ रहा है।
 He is buying (far), वो खरीद रहा है।
 She is selling (near), ये बेच रही है।
-It is sending (far), वो भेज रहा है।
+He is sending (far), वो भेज रहा है।
 He is receiving (near), ये ले रहा है।
-That is completing, वो पूरा कर रहा है।
+He is completing (near), वो पूरा कर रहा है।
 He is checking (far), वो जांच रहा है।
 She is deciding (near), ये निर्णय कर रही है।
-It is choosing (far), वो चुन रहा है।
+He is choosing (far), वो चुन रहा है।
 He is using (near), ये इस्तेमाल कर रहा है।
-That is pressing, वो दबा रहा है।
+He is pressing (far), वो दबा रहा है।
 He is pulling (far), वो खींच रहा है।
 She is pushing (near), ये धक्का दे रही है।
-It is touching (far), वो छू रहा है।
 He is showing (near), ये दिखा रहा है।
 He is calling (far), वो बुला रहा है।
 He is asking (far), वो पूछ रहा है।
 She is replying (near), ये जवाब दे रही है।
-He is paying (far), वो चुका रहा है।
 
 ⸻
 
 ## Simple Future (वो/ये verb-एगा/एगी)
 
-He will lose (far), वो हारेगा। ✅ (“खोएगा” → means lose an object; “हारेगा” more natural for person/context)
+
 She will bring (near), ये लाएगी।
-It will take (far), वो लेगा।
-This will give (near), ये देगा।
-That will hear (far), वो सुनेगा। ✅ (“सुनाई देगा” → passive; incorrect here)
+He will take (far), वो लेगा।
+He will give (near), ये देगा।
+He will hear (far), वो सुनेगा।
 He will see (far), वो देखेगा।
 She will watch (near), ये देखेगी।
-It will do (far), वो करेगा।
-This will get ready (near), ये तैयार होगा।
-That will keep (far), वो रखेगा।
+He will do (far), वो करेगा।
+He will get ready (near), ये तैयार होगा।
 He will marry (far), वो शादी करेगा।
-She will hate (near), ये नफरत करेगी।
-This will swim, ये तैरेगा।
-That will reach, वो पहुंचेगा।
-He will arrive (far), वो पहुंचेगा।
+She will swim (near), ये तैरेगा।
+He will reach (far), वो पहुंचेगा।
 She will speak (near), ये बात करेगी।
-It will say (far), वो बोलेगा।
-This will grow (near), ये बढ़ेगा।
+He will say (far), वो बोलेगा।
 That will change (far), वो बदलेगा।
 He will meet (far), वो मिलेगा।
-She will live (near), ये रहेगी।
-It will stay (far), वो ठहरेगा।
-This will feel (near), ये महसूस करेगा।
-That will work (far), वो काम करेगा।
+He will stay (far), वो ठहरेगा।
+He will work (far), वो काम करेगा।
 
 ⸻
 
@@ -87,23 +76,19 @@ He slept (far), वो सोया।
 She woke up (near), ये उठी।
 It went (far), वो गया।
 This came (near), ये आया।
-That sat (far), वो बैठा।
+He sat (far), वो बैठा।
 He stood (far), वो खड़ा हुआ।
 She reached (near), ये पहुंची।
 It arrived (far), वो पहुंचा।
-This lived (near), ये रहा।
 That stayed (far), वो ठहरा।
 He met (far), वो मिला।
-She grew (near), ये बढ़ी।
 It changed (far), वो बदला।
 This happened (near), ये हुआ।
-That became (far), वो बना।
 He returned (far), वो लौटा।
 She stopped (near), ये रुकी।
 It started (far), वो शुरू हुआ।
 This fell (near), ये गिरा।
-That rose (far), वो उठा।
 He walked (far), वो चला।
 She ran (near), ये दौड़ी।
 It swam (far), वो तैरा।
-This sang, ये गाया।
+He sang (near), ये गाया।
