--- a/oct-2025/all_flashcards/5. Transitive_Past_Tense.md
+++ b/oct-2025/all_flashcards/5. Transitive_Past_Tense.md
@@ -1,107 +1,81 @@
 # Transitive Past Tense - Subject + ने + Object + Verb Agreement
 
-## Masculine Singular Objects (verb-आ)
+## Singular Objects
 
 I ate food, मैंने खाना खाया।
-I drank coffee, मैंने कॉफ़ी पिया।
-I read book, मैंने किताब पढ़ा।
-I wrote letter, मैंने पत्र लिखा।
-I bought car, मैंने कार खरीदा।
-I sold house, मैंने घर बेचा।
-I opened door, मैंने दरवाज़ा खोला।
-I closed window, मैंने खिड़की बंद किया।
+I drank coffee, मैंने कॉफ़ी पि।
+I read the book, मैंने किताब पढ़ी।
+I bought the car, मैंने car खरीदी।
+I sold the house, मैंने घर बेचा।
+I opened the door, मैंने दरवाज़ा खोला।
+I closed the window, मैंने खिड़की बंद कि।
 I started work, मैंने काम शुरू किया।
-I stopped music, मैंने संगीत रोका।
-I found money, मैंने पैसा पाया।
-I lost bag, मैंने बैग खोया।
-I brought table, मैंने मेज़ लाया।
-I took chair, मैंने कुर्सी लिया।
-I gave gift, मैंने उपहार दिया।
-I sent message, मैंने संदेश भेजा।
-I received call, मैंने कॉल लिया।
-I completed project, मैंने प्रोजेक्ट पूरा किया।
-I checked paper, मैंने कागज़ जांचा।
-I used phone, मैंने फोन इस्तेमाल किया।
+I brought the table, मैंने मेज़ लाई।
+I took the chair, मैंने कुर्सी लि।
+I gave the gift, मैंने gift दिया।
+I sent the message, मैंने संदेश भेजा।
+I completed the project, मैंने प्रोजेक्ट पूरा किया।
+I checked the paper, मैंने कागज़ जांचा।
+I used the phone, मैंने फोन इस्तेमाल किया।
 
 He ate apple, उसने सेब खाया।
-She drank tea, उसने चाय पिया।
-You read story, तुमने कहानी पढ़ा।
-You wrote song, आपने गीत लिखा।
-We bought train, हमने ट्रेन खरीदा।
-They sold office, उन्होंने दफ़्तर बेचा।
-These opened shop, इन्होंने दुकान खोला।
-Those closed market, उन्होंने बाज़ार बंद किया।
+She drank tea, उसने चाय पि।
+You read the story, तुमने कहानी पढ़ी।
+You wrote the song (respect), आपने गीत लिखा।
+We bought the car, हमने car खरीदी।
+They sold the office (far), उन्होंने दफ़्तर बेचा।
+They opened the shop (near), इन्होंने दुकान खोली।
+They closed the market (far), उन्होंने बाज़ार बंद किया।
 
 ## Masculine Plural Objects (verb-ए)
 
 I ate apples, मैंने सेब खाए।
-I read books, मैंने किताबें पढ़ीं।
 I bought clothes, मैंने कपड़े खरीदे।
-I sold cars, मैंने कारें बेचीं।
-I opened doors, मैंने दरवाज़े खोले।
-I closed windows, मैंने खिड़कियां बंद कीं।
-I brought chairs, मैंने कुर्सियां लाईं।
-I took bags, मैंने बैग लिए।
-I found keys, मैंने चाबियां पाईं।
-I lost papers, मैंने कागज़ खोए।
-I sent letters, मैंने पत्र भेजे।
-I received gifts, मैंने उपहार लिए।
-I used trains, मैंने ट्रेनें इस्तेमाल कीं।
-I checked numbers, मैंने संख्याएं जांचीं।
+I sold the cars, मैंने cars बेचीं।
+I opened the doors, मैंने दरवाज़े खोले।
+I closed the windows, मैंने खिड़कियां बंद कीं।
+I took the bags, मैंने बैग लिए।
+I found the keys (feminine), मैंने चाबियां पाईं।
+I lost the papers, मैंने कागज़ खोए।
+I sent the letters, मैंने पत्र भेजे।
+I received the gifts, मैंने उपहार लिए।
 
-He ate foods, उसने खाने खाए।
-She drank coffees, उसने कॉफ़ियां पीं।
-You read stories, तुमने कहानियां पढ़ीं।
-You wrote songs, आपने गीत लिखे।
-We bought houses, हमने घर खरीदे।
-They sold shops, उन्होंने दुकानें बेचीं।
+You read the stories, तुमने कहानियां पढ़ीं।
+You wrote songs (respect), आपने गीत लिखे।
+We bought the houses, हमने घर खरीदे।
+They sold the shops (far), उन्होंने दुकानें बेचीं।
 
 ## Feminine Singular Objects (verb-ई)
 
 I ate vegetable, मैंने सब्जी खाई।
-I read book, मैंने किताब पढ़ी।
 I wrote story, मैंने कहानी लिखी।
-I bought thing, मैंने चीज़ खरीदी।
-I sold table, मैंने मेज़ बेची।
-I opened bag, मैंने बैग खोली।
-I closed shop, मैंने दुकान बंद की।
-I started conversation, मैंने बातचीत शुरू की।
-I stopped voice, मैंने आवाज़ रोकी।
-I found language, मैंने भाषा पाई।
-I lost information, मैंने जानकारी खोई।
-I brought chair, मैंने कुर्सी लाई।
-I took thing, मैंने चीज़ ली।
-I gave help, मैंने मदद दी।
-I sent information, मैंने जानकारी भेजी।
-I received news, मैंने खबर ली।
-I used language, मैंने भाषा इस्तेमाल की।
-I checked bag, मैंने बैग जांची।
+I bought the thing (feminine), मैंने चीज़ खरीदी।
+I sold the table, मैंने मेज़ बेची।
+I closed the shop, मैंने दुकान बंद की।
+I started the conversation, मैंने बातचीत शुरू की।
+I brought the chair, मैंने कुर्सी लाई।
+I sent the information, मैंने जानकारी भेजी।
 
-He ate breakfast, उसने नाश्ता खाया।
 She drank water, उसने पानी पिया।
-You read information, तुमने जानकारी पढ़ी।
-You wrote conversation, आपने बातचीत लिखी।
-We bought thing, हमने चीज़ खरीदी।
-They sold language, उन्होंने भाषा बेची।
+You read the information, तुमने जानकारी पढ़ी।
+We bought the thing, हमने चीज़ खरीदी।
 
 ## Feminine Plural Objects (verb-ईं)
 
-I read books, मैंने किताबें पढ़ीं।
+I read the books (past), मैंने किताबें पढ़ीं।
 I wrote stories, मैंने कहानियां लिखीं।
-I bought things, मैंने चीज़ें खरीदीं।
-I sold tables, मैंने मेज़ें बेचीं।
-I opened bags, मैंने बैग खोलीं।
-I closed shops, मैंने दुकानें बंद कीं।
-I brought chairs, मैंने कुर्सियां लाईं।
-I took things, मैंने चीज़ें लीं।
-I found languages, मैंने भाषाएं पाईं।
-I lost voices, मैंने आवाज़ें खोईं।
-I sent conversations, मैंने बातचीत भेजीं।
-I received informations, मैंने जानकारियां लीं।
+I bought the things, मैंने चीज़ें खरीदीं।
+I sold the tables, मैंने मेज़ें बेचीं।
+I closed the shops, मैंने दुकानें बंद कीं।
+I brought the chairs, मैंने कुर्सियां लाईं।
+I took the things, मैंने चीज़ें लीं।
 
-He ate breakfasts, उसने नाश्ते खाए।
-She drank waters, उसने पानियां पीं।
-You read informations, तुमने जानकारियां पढ़ीं।
-You wrote conversations, आपने बातचीत लिखीं।
-We bought things, हमने चीज़ें खरीदीं।
-They sold languages, उन्होंने भाषाएं बेचीं।
+
+He ate apples, उसने सेब खाए।
+You read books, तुमने किताबें पढ़ीं।
+You wrote answers (respect), आपने जवाब लिखे।
+We bought the things, हमने चीज़ें खरीदीं।
+They sold chairs, उन्होंने कुर्सियां बेचीं।
+
+
+
