--- a/oct-2025/all_flashcards/4. You_We_They_across_tenses.md
+++ b/oct-2025/all_flashcards/4. You_We_They_across_tenses.md
@@ -4,114 +4,94 @@
 ### तुम verb-ते हो | Other pronouns verb-ते हैं
 
 You drink, तुम पीते हो।
-You eat, आप खाते हैं।
+You eat (respect), आप खाते हैं।
 We write, हम लिखते हैं।
-They read, वे पढ़ते हैं।
-These sing, ये गाते हैं।
+They read (far), वे पढ़ते हैं।
+They sing (near), ये गाते हैं।
 You work, तुम काम करते हो।
-You help, आप मदद करते हैं।
+You help, तुम मदद करते हो।
 We think, हम सोचते हैं।
-They know, वे जानते हैं।
-These understand, ये समझते हैं।
+They know (far), वे जानते हैं।
+They understand (near), ये समझते हैं।
 You listen, तुम सुनते हो।
-You remember, आप याद रखते हैं।
-We forget, हम भूलते हैं।
-They feel, वे महसूस करते हैं।
-These want, ये चाहते हैं।
-You like, तुम पसंद करते हो।
-You believe, आप मानते हैं।
+You remember (respect), आप याद रखते हैं।
+You believe (respect), आप मानते हैं।
 We see, हम देखते हैं।
 They watch, वे देखते हैं।
-These live, ये रहते हैं।
 You play, तुम खेलते हो।
-You speak, आप बात करते हैं।
-We grow, हम बढ़ते हैं।
+You speak (respect), आप बात करते हैं।
 They change, वे बदलते हैं।
-These need, ये ज़रूरत होते हैं।
 
 ## Present Continuous
 ### तुम verb रहे हो | Other pronouns verb रहे हैं
 
 You are buying, तुम खरीद रहे हो।
-You are selling, आप बेच रहे हैं।
+You are selling (respect), आप बेच रहे हैं।
 We are opening, हम खोल रहे हैं।
 They are closing, वे बंद कर रहे हैं।
-These are starting, ये शुरू कर रहे हैं।
 You are stopping, तुम रोक रहे हो।
-You are building, आप बना रहे हैं।
+You are building (respect), आप बना रहे हैं।
 We are cutting, हम काट रहे हैं।
-They are joining, वे जोड़ रहे हैं।
-These are pulling, ये खींच रहे हैं।
+They are joining (far), वे जोड़ रहे हैं।
+They are pulling (near), ये खींच रहे हैं।
 You are pushing, तुम धक्का दे रहे हो।
-You are pressing, आप दबा रहे हैं।
+You are pressing (respect), आप दबा रहे हैं।
 We are touching, हम छू रहे हैं।
-They are sending, वे भेज रहे हैं।
-These are receiving, ये ले रहे हैं।
+They are sending (near), वे भेज रहे हैं।
+They are receiving (far), ये ले रहे हैं।
 You are completing, तुम पूरा कर रहे हो।
-You are checking, आप जांच रहे हैं।
+You are checking (respect), आप जांच रहे हैं।
 We are asking, हम पूछ रहे हैं।
-They are calling, वे बुला रहे हैं।
-These are showing, ये दिखा रहे हैं।
+They are calling (far), वे बुला रहे हैं।
+They are showing (near), ये दिखा रहे हैं।
 You are deciding, तुम निर्णय ले रहे हो।
 You are choosing, आप चुन रहे हैं।
 We are using, हम इस्तेमाल कर रहे हैं।
-They are paying, वे चुका रहे हैं।
-These are spending, ये खर्च कर रहे हैं।
+They are paying (near), वे pay कर रहे हैं।
+They are spending (near), ये खर्च कर रहे हैं।
 
 ## Simple Future
 ### तुम verb-ओगे/ओगी | Other pronouns verb-एंगे/एंगी
 
-You will find, तुम पाओगे।
-You will lose, आप खोएंगे।
 We will bring, हम लाएंगे।
-They will take, वे लेंगे।
-These will give, ये देंगे।
+They will take (far), वे लेंगे।
+They will give (near), ये देंगे।
 You will hear, तुम सुनोगे।
-You will do, आप करेंगे।
+You will do (respect), आप करेंगे।
 We will get ready, हम तैयार होंगे।
-They will keep, वे रखेंगे।
-These will marry, ये शादी करेंगे।
+They will keep (far), वे रखेंगे।
+They will marry (near), ये शादी करेंगे।
 You will hate, तुम नफरत करोगे।
-You will travel, आप यात्रा करेंगे।
+You will travel (respect), आप यात्रा करेंगे।
 We will swim, हम तैरेंगे।
-They will reach, वे पहुंचेंगे।
-These will arrive, ये पहुंचेंगे।
+They will reach (far), वे पहुंचेंगे।
 You will say, तुम बोलोगे।
-You will meet, आप मिलेंगे।
+You will meet (respect), आप मिलेंगे।
 We will stay, हम ठहरेंगे।
-They will continue, वे जारी रखेंगे।
-These will happen, ये होंगे।
+They will continue (far), वे जारी रखेंगे।
 You will sleep, तुम सोओगे।
-You will wake up, आप उठेंगे।
 We will go, हम जाएंगे।
-They will come, वे आएंगे।
-These will sit, ये बैठेंगे।
+They will come (far), वे आएंगे।
+They will sit (near), ये बैठेंगे।
 
 ## Past Intransitive
 ### All pronouns verb-ए/ईं
 
 You slept, तुम सोए।
-You woke up, आप उठे।
+You woke up (respect), आप उठे।
 We went, हम गए।
-They came, वे आए।
-These sat, ये बैठे।
+They came (far), वे आए।
+They sat (near), ये बैठे।
 You stood, तुम खड़े हुए।
-You reached, आप पहुंचे।
-We arrived, हम पहुंचे।
-They lived, वे रहे।
-These stayed, ये ठहरे।
+You reached (respect), आप पहुंचे।
+We reached, हम पहुंचे।
+They stayed (near), ये ठहरे।
 You met, तुम मिले।
-You grew, आप बढ़े।
 We changed, हम बदले।
-They happened, वे हुए।
-These became, ये बने।
 You returned, तुम लौटे।
-You stopped, आप रुके।
-We started, हम शुरू हुए।
+You stopped (respect), आप रुके।
 They fell, वे गिरे।
-These rose, ये उठे।
 You walked, तुम चले।
-You ran, आप दौड़े।
+You ran (respect), आप दौड़े।
 We swam, हम तैरे।
-They sang, वे गाए।
-These traveled, ये गए।
+They sang (far), वे गाए।
